# flaude

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  build-info.yaml  build_hook.py  mkdocs.yml  pyproject.toml  service-info.yaml  tox.ini
.claude/: settings.local.json
.github/workflows/: fix-readme.yml
docs/: BUG.md  TODO.md  dashboard.md  development.md  index.md  reference.md  rust-hook.md  tmux.md
docs/plans/: 2026-03-08-welcome-screen-design.md
rust/: Cargo.toml
rust/src/: main.rs
scripts/: bump_version.py  demo.py  demo.tape
src/flaude/: __init__.py  __main__.py  cli.py  config.py  constants.py  formatting.py  git.py  tools.py  version_check.py
src/flaude/hooks/: dispatcher.py  teams.py
src/flaude/rules/: default.yaml  engine.py
src/flaude/state/: __init__.py  cleanup.py  manager.py  models.py  scanner.py
src/flaude/terminal/: detect.py  inject.py  launch.py  navigate.py  process.py  tmux.py
src/flaude/tui/: app.py  app.tcss  notifications.py
src/flaude/tui/screens/: confirm.py  confirm_dialog.py  help_dialog.py  input_dialog.py  loop_panel.py  notification_settings.py  prompt_dialog.py  settings_panel.py
src/flaude/tui/widgets/: activity_log.py  footer_bar.py  permission_panel.py  session_detail.py  session_table.py  welcome_screen.py
tests/: conftest.py  helpers.py  test_activity_log.py  test_cleanup.py  test_cli_helpers.py  test_config.py  test_constants.py  test_dispatcher.py  test_formatting.py  test_git.py  test_models.py  test_notifications.py  test_rules_engine.py  test_scanner.py  test_scenarios.py  test_state_manager.py  test_terminal.py  test_tools.py  test_tty_navigation.py  test_version_check.py
