[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaude"
dynamic = ["version"]
description = "Session manager for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "setproctitle>=1.3",
]

[project.scripts]
flaude = "flaude.cli:main"

[tool.hatch.version]
path = "src/flaude/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/flaude"]
artifacts = ["src/flaude/bin/*"]

[tool.hatch.build.hooks.custom]
path = "build_hook.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
